# Engine3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: config.h  glad.c  glad.h  main.cpp
src/buffer/: FrameBufferObject.cpp  FrameBufferObject.h
src/camera/: Camera.cpp  Camera.h  OrthogonalCamera.cpp  OrthogonalCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/component/: ComplexGameObject.h  GroupableGameObject.cpp
src/components/: LightSource.cpp  LightSource.h  ShadowCaster.cpp  ShadowCaster.h
src/control/: ControlSystem.cpp  ControlSystem.h
src/core/: config.h  glerror.h
src/ecs/: assign.h  component.h  core.h  ecs.h  entity.h  event.h  hash.h  iterator.h  system.h  types.h
src/entities/: Entity.cpp  Entity.h  TexturedModel.cpp  TexturedModel.h
src/entities/components/: ColorMap.h  Component.h  LightSource.h  Shadow.h
src/gldata/: GLData.cpp  GLData.h  TextureID.cpp  TextureID.h  VAOId.cpp  VAOId.h  VBOId.cpp  VBOId.h
src/light/: LightSource.cpp  LightSource.h
src/loader/: Loader.cpp  Loader.h  OBJLoader.cpp  OBJLoader.h  TextureLoader.cpp  TextureLoader.h  VAOLoader.cpp  VAOLoader.h
src/material/: ColorMap.cpp  ColorMap.h  EntityMaterial.cpp  EntityMaterial.h  LightReflection.h  MaterialMap.cpp  MaterialMap.h  NormalMap.cpp  NormalMap.h  ParallaxMap.cpp  ParallaxMap.h  SpecularMap.cpp  SpecularMap.h  Texture.cpp  Texture.h  TextureStretch.h
src/math/: Matrix.cpp  Matrix.h  Precision.h  Projection.cpp  Projection.h  Vector.cpp  Vector.h  angle.cpp  angle.h
src/model/: RawModel.cpp  RawModel.h
src/render/: MasterSystem.cpp  MasterSystem.h  RenderSystem.cpp  RenderSystem.h  ShaderProgram.cpp  ShaderProgram.h
src/render/entities/: EntityShader.cpp  EntityShader.h  EntitySystem.cpp  EntitySystem.h  fs.glsl  vs.glsl
src/render/implementations/entities/: EntityShader.h  EntitySystem.h  fs.glsl  vs.glsl
src/render/implementations/normals/: NormalShader.h  NormalSystem.h  fs.glsl  gs.glsl  vs.glsl
src/render/normals/: NormalShader.h  NormalSystem.h
src/render/shadow/: ShadowShader.cpp  ShadowShader.h  ShadowSystem.cpp  ShadowSystem.h  fs.glsl  vs.glsl
src/resources/: RawModel.cpp  RawModel.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
src/transformation/: ComplexGameObject.cpp  ComplexTransformation.cpp  ComplexTransformation.h  Group.cpp  Group.h  GroupableGameObject.cpp  GroupableGameObject.h  Transformation.cpp  Transformation.h  angle.h
